--- a/resources/sass/pages/chat_completo.scss
+++ b/resources/sass/pages/chat_completo.scss
@@ -22,7 +22,7 @@
 }
 
 .menu_chat {
-    border: 1px solid $border-color;
+    border: 1px solid rgb(240, 240, 240);
     padding: 10px;
     height: 60px;
 }
@@ -114,13 +114,9 @@
 .srch_bar .input-group-addon button {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
     border: medium none;
-    padding: 0;
+    padding: 5px;
     color: #707070;
     font-size: 18px;
-}
-
-.srch_bar .input-group-addon {
-    margin: 0 0 0 -27px;
 }
 
 .chat_ib h5 {
@@ -163,7 +159,7 @@
 }
 
 .inbox_chat {
-    height: 390px;
+    height: 460px;
     overflow-y: scroll;
 }
 
@@ -181,8 +177,9 @@
 
 .received_msg {
     display: inline-block;
-    padding: 0 0 0 10px;
+    padding: 0px 0px 0px 10px;
     vertical-align: top;
+    max-width: 50%;
 }
 
 .received_withd_msg p {
