--- a/resources/sass/pages/chat_completo.scss
+++ b/resources/sass/pages/chat_completo.scss
@@ -170,10 +170,15 @@
     border-bottom: 1px solid #c4c4c4;
     margin: 0;
     padding: 18px 16px 10px;
+    cursor: pointer;
+
+    &:hover, &:focus {
+        background-color: #ebebeb;
+    }
 }
 
 .active_chat {
-    background: #ebebeb;
+    background: #e4e4e4;
 }
 
 .incoming_msg_img {
