--- a/resources/sass/pages/grupos_perfil.scss
+++ b/resources/sass/pages/grupos_perfil.scss
@@ -3,8 +3,10 @@
 @import '../components/logo';
 @import '../components/navbar';
 @import '../components/style';
-@import '../components/form';
 @import '../layouts/l-content-aside';
+@import "../components/modal";
+@import '../components/forms/form';
+@import "../components/btn";
 .btn {
     background-color: $primary-color;
     margin-top: 50px;
