--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -298,6 +298,10 @@ input[type="file"] {
     font-size: 19px;
 }
 
+.h4-size {
+    font-size: 16px;
+}
+
 .enviarmsg {
     background-color: white;
     border: none;
