--- a/resources/sass/pages/grupos_perfil.scss
+++ b/resources/sass/pages/grupos_perfil.scss
@@ -27,8 +27,20 @@
     padding: 25px;
 }
 
-.input-pesquisar-grupos {
-    margin-top: 30px;
+.cabecalhoperfil {
+    background-color: white;
+    border: 1px solid $border-color;
+    padding: 15px 30px 15px 30px;
+    border-radius: 4px;
+    margin-bottom: 20px;
+}
+
+.pesquisar-grupos {
+    background-color: white;
+    border: 1px solid $border-color;
+    padding: 15px;
+    border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 .image-circle-grupo {
@@ -43,21 +55,11 @@
 
 .hazul {
     font-family: $font-stack;
-    padding-bottom: 10px;
     color: #0b0b31;
     font-weight: bold;
     margin-left: 10px;
     font-size: 18px;
     margin-top: 10px;
-}
-
-.h-titulo {
-    font-family: $font-stack;
-    padding-bottom: 10px;
-    color: #0b0b31;
-    font-weight: bold;
-    margin-left: 10px;
-    font-size: 25px;
 }
 
 .pessoas-grupos {
@@ -107,12 +109,15 @@
 
 .group-content {
     display: flex;
-    margin-right: 40px;
 }
 
 .image-grupo {
     height: 45px;
     width: 45px;
+}
+
+.convidar {
+    margin-left: 20px;
 }
 
 .group-profile-buttons .buttons {
@@ -122,13 +127,22 @@
     padding: 7px 10px 7px 10px;
 }
 
+.organizar-button {
+    width: 100px;
+}
+
+.organizar-button a,
+.organizar-button button {
+    float: right;
+}
+
 .margin-usuarios {
     margin-left: 150px;
 }
 
 .menu-grupos a,
 .pensando-grupo a {
-    color: #0b0b31;
+    color: $primary-color;
     padding: 10px;
     font-weight: bold;
 }
@@ -161,9 +175,19 @@
     margin-left: 10px;
 }
 
-.texto-sobre-grupos p {
-    margin-top: 5px;
-    margin-bottom: 30px;
+.membros {
+    background-color: white;
+    border: 1px solid $border-color;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+.informacao-grupo {
+    background-color: white;
+    border: 1px solid $border-color;
+    padding: 15px;
+    border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 .buttons:hover {
@@ -181,7 +205,7 @@
     margin-bottom: 30px;
 }
 
-.group-profile-buttons button {
+.organizar-button button {
     background-color: white;
     border: none;
 }
@@ -190,12 +214,16 @@
     height: 20em;
     width: 100%;
     opacity: 0.2;
+    background-color: rgb(199, 199, 199);
+    margin-bottom: 10px;
 }
 
 .box-post {
     width: 100%;
     background-color: white;
-    margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
-    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid $border-color;
+    padding: 15px;
 }
