--- a/resources/sass/assets/_variables.scss
+++ b/resources/sass/assets/_variables.scss
@@ -1,6 +1,6 @@
 //Colors
 $primary-color: #2C3E50;
-$shadow-color: rgba(0, 0, 0, .04);
+$shadow-color: #0000000a;
 $border-color: #E1E1E1;
 $text-color: #707070;
 $danger-color: #e63e3e;
