--- a/resources/sass/pages/chat_completo.scss
+++ b/resources/sass/pages/chat_completo.scss
@@ -71,7 +71,6 @@
     
     .imgmenuchat img {
         position: relative;
-        margin-left: 10px;
         margin-right: 10px;
         float: right;
     }
@@ -82,10 +81,25 @@
     }
     
     .pesquisarchat {
-        height: 30px;
-        width: 30px;
-        margin-left: 10px;
-        margin-right: 10px;
+        width: 150px;
+        box-sizing: border-box;
+        border-radius: 150px;
+        font-size: 16px;
+        background-color: white;
+        background-image: url("../img/search-alt-regular-gray.png");
+        background-position: 5px 5px;
+        background-repeat: no-repeat;
+        background-size: 22px;
+        padding: 5px 10px 5px 40px;
+    }
+    
+    .pesquisarchat:focus {
+        -webkit-transition: width 0.2s ease-in-out;
+        transition: width 0.2s ease-in-out;
+        width: 350px;
+        right: 50px;
+        background-color: rgb(236, 236, 236);
+        border: 1px solid $border-color;
     }
     
     .pesquisar-chat {
@@ -95,10 +109,22 @@
     }
     
     .pesquisar-chat input {
-        width: 100%;
+        background-image: url("../img/search-alt-regular-gray.png");
+        background-position: 7px 5px;
+        background-repeat: no-repeat;
+        background-color: rgb(240, 240, 240);
+        background-size: 22px;
         border-radius: 150px;
+        border: 1px solid white;
         height: 30px;
-        padding: 0 40px;
+        width: 100%;
+        padding: 5px 5px 5px 35px;
+        -webkit-transition: width 0.4s ease-in-out;
+        transition: width 0.1s ease-in-out;
+    }
+    
+    .pesquisar-chat input:focus {
+        background-color: #fff;
     }
     
     .boxtexto {
@@ -113,7 +139,7 @@
         float: left;
         overflow-y: scroll;
         width: 100%;
-        height: 76vh;
+        height: 68vh;
         border-right: 1px solid #e4e4e4;
     }
     
@@ -254,7 +280,7 @@
         padding: 30px 25px 0px 25px;
         top: -5px;
         width: 100%;
-        height: 61vh;
+        height: 62vh;
         overflow-y: scroll;
         background-image: url("../img/footer-claro.svg");
         background-size: cover;
